updated the payout section
